# zoozel

./: CMakeLists.txt  README  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  obstacle.cpp  obstacle.h  player.cpp  player.h  scene.cpp  scene.h  track.cpp  track.h  zoozel.kdev4  zoozel.pro
